--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
             <li><a href="Website Attempt\Poem12.html">Abke Bichde by Ahmad Faraz </a></li>
 
-            <li><a href="Website Attempt\Poem13.html"></a>Koi Khatra Nai by Om Prakash Valmiki</li>
+            <li><a href="Website Attempt\Poem13.html">Koi Khatra Nai by Om Prakash Valmiki</a></li>
 
-            <li><a href="Website Attempt\Poem14.html"></a>I Wouldn't Even Know What to Do with a Third Chance by Kaveh Akbar</li>
+            <li><a href="Website Attempt\Poem14.html">I Wouldn't Even Know What to Do with a Third Chance by Kaveh Akbar</a>/li>
 
             <li><a href="Website Attempt\Poem15.html">Juliet(I) by Sarah Certa</a></li>
 
